fixed apis
